--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -50,8 +50,8 @@ fr:
 ###################################
   download:
     title1: "Jouez avec nous !"
-    title_under1: "Avant de lancer Hopen Family, faites partie des favoris à tester l'Hopen
-      en participant à notre premier concours."
+    title_under1: "Avant de lancer Hopen Family, participez à notre premier grand concours #HOPENBORDEAUX."
+    title_under3: "Parce que nous sommes fiers d’être bordelais, nous voulons vous faire partager notre lieu de vie et vous faire gagner plein de cadeaux."
     title_under2: "Inscrivez-vous pour en savoir plus."
     title: "Télécharger l'application"
     title_under: "Notre application est disponible sur l'ensemble de vos terminaux ! Téléchargez-la maintenant et commencez l'aventure"
@@ -237,3 +237,45 @@ www.hopenproject.com "
 ##########################################
   home:
     title_under: "L'Objet connecté pour nos grands-parents"
+##########################################
+  calendar:
+    title: "NOTRE PREMIER CONCOURS #HOPENBORDEAUX"
+    title_under: "Nelly & Yoann, Co-fondateurs d'Hopen Family"
+    why: "Bonjour à tous et bienvenue dans le monde Hopen Family."
+    why2: "Nous sommes très heureux de vous faire découvrir notre histoire entrepreneuriale et nous vous invitons avec grand plaisir à participer au premier concours #HOPENBORDEAUX que nous lançons le 18 Mars 2017."
+    title1: "Pourquoi ce concours ?"
+    title_under1: "Avant le lancement de notre campagne de financement participative"
+    title_under11: "qui débutera le 10 Mai prochain, nous vous invitons à participer à notre premier concours #HOPENBORDEAUX, concours dans lequel vous allez découvrir notre univers."
+    title2: "Un peu plus sur nous..."
+    title_under2: "Nous, c'est Nelly, Yoann et Pierre, tout les trois bordelais et partageant les mêmes valeurs. Nous nous sommes réunit autour d'une problématique qui nous tient à coeur : lutter contre l'isolement des personnes âgées."
+    title3: "Qu’est-ce qu’on fait ?"
+    title_under3: "Nous développons un objet connecté appelé HOPEN qui vous permettra de partager toutes vos nouvelles à Papy et Mamie en toute simplicité. La suite de notre aventure lors de notre crowdfunding du 10 Mai. En attendant suivez-nous sur"
+    title4: "Et donc ?"
+    title_under4: "Le principe est simple : vous connaissez les calendriers de l’avent ? C’est pareil.
+Chaque jour, découvrez une mission à accomplir pour gagner plein de cadeaux.
+Pour cela, nous avons fait appel à tout notre écosystème qui a été super réactif et hyper séduit par Hopen Family "
+    title_under41: "Tesla, Femer, Toot, Monsieur T-shirt, Allo Resto, Akrone, Arbor et sens, Château Lamothe Castera, L’appuntamento, Cap Sciences, Théâtre des Salinières, Le Taquin, Everyone speaks, T’as déjà vu…,Mistigri."
+    title_under42: "Nous les remercions infiniment de leur implication, car le plus important, c’est la famille. Et ils le partagent avec nous "
+    text1: "Cliquez sur le coeur cadeau du jour"
+    text2: "Découvrez le concours du jour"
+    text3: "A vous de jouer !"
+    text4: "Ce n'est pas parce que la fête des grands-mères est finie qu'il n'y a plus de cadeaux !!"
+    mars: "Mars"
+    avril: "Avril"
+    mai: "Mai"
+    play: "Cliquez ici pour jouer"
+    title-regle: "Régles du Concours"
+    regle: "L’Utilisateur est libre de participer au premier concours #HOPENBORDEAUX. L’entreprise Hopen Project propose aux Utilisateurs de participer à un concours dans le cadre du lancement du projet Hopen Family. Une fois connecté sur le site www.hopen.family, les utilisateurs ont accès au concours. Chaque jour, une règle du jeux sera partagée, annonçant la mission proposée à l’Utilisateur. Celui-ci devra se rendre sur la page Facebook www.facebook.com/hopenfamily et pourra commenter les publications en suivant les missions proposées par Hopen Project afin d‘être tiré au sort.
+Ce concours ne constitue en aucun cas un contrat de travail et n’entraîne aucune rémunération de la part d’Hopen Project.
+Les lots gagnés sont entièrement gratuits et seront envoyés par l’équipe Hopen Project.
+En participant à ce concours, les Utilisateurs donnent la permission à Hopen Project d’utiliser librement les photos publiées sur la page Facebook Hopen Family. Hopen Project estime la date de début le 18 mars et de fin du concours au 10 Mai 2017. L’Utilisateur est libre et éclairé et c’est de sa propre initiative qu’il se porte volontaire au concours. Aucune obligation de participation à ce concours. Les modalités, les règles et les résultats du concours seront organisés par Hopen Project qui informera les utilisateurs gagnants sur sa page Facebook www.facebook.com/hopenfamily
+Mentions légales Hopen Project S.A.S. Capital 10 000 Euros SIRET 81193945300015 www.hopenproject.com"
+##########################################
+  play:
+    title: "Nos partenaires Concours"
+#########################################
+  press:
+    title: "Nos Partenaires Presse"
+    title_under: "Ils nous suivent, nous relaient et parlent de nous."
+    title_under1: "Découvrez les articles sur nous dans notre espace presse."
+    btn: "Espace Presse"
