change style of heart and take of partenair alloresto

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -242,7 +242,7 @@ www.hopenproject.com"
     title_under4: "The principle is simple: you know the advent calendars? Same story
 Every day, discover a mission, accomplish it and win many gifts.
 For this, we have appealed to our whole ecosystem which has been super reactive and hyper seduced by Hopen Family:"
-    title_under41: "Tesla, Femer, Toot, Monsieur T-shirt, Allo Resto, Akrone, Arbor and sens, Château Lamothe Castera, L'appuntamento, Cap Sciences, Salinières Theater, RTL2..."
+    title_under41: "Tesla, Femer, Toot, Monsieur T-shirt, Akrone, Arbor and sens, Château Lamothe Castera, L'appuntamento, Cap Sciences, Salinières Theater, RTL2..."
     title_under42: "We infinitely thank them for their involvement, because the most important thing is : LoveYourFamily. And they share it with us."
     text1: "Click on the gift box of the day"
     text2: "Discover the contest of the day"
