--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -254,7 +254,7 @@ www.hopenproject.com "
     title_under4: "Le principe est simple : vous connaissez les calendriers de l’avent ? C’est pareil.
 Chaque jour, découvrez une mission à accomplir pour gagner plein de cadeaux.
 Pour cela, nous avons fait appel à tout notre écosystème qui a été super réactif et hyper séduit par Hopen Family "
-    title_under41: "Tesla, Femer, Toot, Monsieur T-shirt, Allo Resto, Akrone, Arbor et sens, Château Lamothe Castera, L’appuntamento, Cap Sciences, Théâtre des Salinières, Le Taquin, Everyone speaks, T’as déjà vu…,Mistigri."
+    title_under41: "Tesla, Femer, Toot, Monsieur T-shirt, Akrone, Arbor et sens, Château Lamothe Castera, L’appuntamento, Cap Sciences, Théâtre des Salinières, Le Taquin, Everyone speaks, T’as déjà vu…,Mistigri."
     title_under42: "Nous les remercions infiniment de leur implication, car le plus important, c’est la famille. Et ils le partagent avec nous "
     text1: "Cliquez sur le coeur cadeau du jour"
     text2: "Découvrez le concours du jour"
