Add badge for home

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,7 +26,7 @@ en:
         title: "Hopen Family"
         description_1: "I can finally send photos to my Grandparents"
         description_2: "They instantly receive news from us"
-        button: "Start Now"
+        button: "Play Now"
         navbar:
           feature: "Concept"
           download: "Download"
@@ -229,24 +229,24 @@ www.hopenproject.com"
   calendar:
     title: "OUR FIRST CONTEST #HOPENBORDEAUX"
     title_under: "Nelly & Yoann, Co-Founders Hopen Family"
-    why: "Hello everyone and welcome to our Hopen Family world."
-    why2: "We are so happy and excited to share our entrepreneurial story with you and we invite you with great pleasure to play in the first #HOPENBORDEAUX contest we are launching on March 18, 2017."
+    why: "Hello everyone and welcome into our Hopen Family world."
+    why2: "We are so happy and excited to share our entrepreneurial story with you and we invite you with great pleasure to play in the first #HOPENBORDEAUX contest on March 18, 2017."
     title1: " Why this contest?"
     title_under1: "Before the launch of our participative fundraising campaign"
-    title_under11: "starting on May 10th, we invite you to participate into our first #HOPENBORDEAUX contest in where you will discover our universe."
+    title_under11: "starting on May 10th, we invite you to participate into our first #HOPENBORDEAUX contest where you will discover our universe."
     title2: "A little more about us ..."
     title_under2: "Here we are, Nelly, Yoann and Pierre, all three born in Bordeaux and sharing the same values. We worked hardly around a huge social issue : fighting against the elderly loneliness."
     title3: "What are we doing ?"
-    title_under3: "We develop a smart object, called HOPEN that will allow you to share all your news to Grandpa and Granny with ease. Keep following our adventure during our crowdfunding of May 10th. Meanwhile, follow us on"
+    title_under3: "We develop a smart object, called HOPEN that will allow you to share all your news with Grandpa and Granny. Awesome, isn't it? Keep following our adventure during our crowdfunding starting on May 10th. Meanwhile, follow us on"
     title4: "And so ?"
-    title_under4: "The principle is simple: you know the advent calendars? Same story
+    title_under4: "The principle is simple: you know the advent calendars? Same story.
 Every day, discover a mission, accomplish it and win many gifts.
 For this, we have appealed to our whole ecosystem which has been super reactive and hyper seduced by Hopen Family:"
     title_under41: "Tesla, Femer, Toot, Monsieur T-shirt, Akrone, Arbor and sens, Château Lamothe Castera, L'appuntamento, Cap Sciences, Salinières Theater, RTL2..."
     title_under42: "We infinitely thank them for their involvement, because the most important thing is : LoveYourFamily. And they share it with us."
-    text1: "Click on the gift box of the day"
+    text1: "Open the daily box and click on the heart"
     text2: "Discover the contest of the day"
-    text3: "Play !"
+    text3: "Play and Good Luck!"
     text4: "It's not because Christmas is over that there are no more gifts !!"
     mars: "March"
     avril: "April"
