--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -26,7 +26,7 @@ fr:
         title: "Hopen Family"
         description_1: "Je peux envoyer mes photos à mes grands-parents"
         description_2: "Ils les reçoivent instantanément"
-        button: "Commencez maintenant !"
+        button: "Jouez maintenant !"
         navbar:
           feature: "Concept"
           download: "Télécharger"
@@ -247,24 +247,24 @@ www.hopenproject.com "
     title_under1: "Avant le lancement de notre campagne de financement participative"
     title_under11: "qui débutera le 10 Mai prochain, nous vous invitons à participer à notre premier concours #HOPENBORDEAUX, concours dans lequel vous allez découvrir notre univers."
     title2: "Un peu plus sur nous..."
-    title_under2: "Nous, c'est Nelly, Yoann et Pierre, tout les trois bordelais et partageant les mêmes valeurs. Nous nous sommes réunit autour d'une problématique qui nous tient à coeur : lutter contre l'isolement des personnes âgées."
+    title_under2: "Nous, c'est Nelly, Yoann et Pierre, tout les trois bordelais et partageant les mêmes valeurs. Nous nous sommes réunis autour d'une problématique qui nous tient à coeur : lutter contre l'isolement des personnes âgées."
     title3: "Qu’est-ce qu’on fait ?"
     title_under3: "Nous développons un objet connecté appelé HOPEN qui vous permettra de partager toutes vos nouvelles à Papy et Mamie en toute simplicité. La suite de notre aventure lors de notre crowdfunding du 10 Mai. En attendant suivez-nous sur"
     title4: "Et donc ?"
     title_under4: "Le principe est simple : vous connaissez les calendriers de l’avent ? C’est pareil.
 Chaque jour, découvrez une mission à accomplir pour gagner plein de cadeaux.
-Pour cela, nous avons fait appel à tout notre écosystème qui a été super réactif et hyper séduit par Hopen Family "
+Pour cela, nous avons fait appel à tout notre écosystème qui a été super réactif et hyper séduit par Hopen Family :"
     title_under41: "Tesla, Femer, Toot, Monsieur T-shirt, Akrone, Arbor et sens, Château Lamothe Castera, L’appuntamento, Cap Sciences, Théâtre des Salinières, Le Taquin, Everyone speaks, T’as déjà vu…,Mistigri."
-    title_under42: "Nous les remercions infiniment de leur implication, car le plus important, c’est la famille. Et ils le partagent avec nous "
-    text1: "Cliquez sur le coeur cadeau du jour"
+    title_under42: "Nous les remercions infiniment de leur implication, car le plus important, c’est la famille. Et ils le partagent avec nous."
+    text1: "Ouvrez la boîte cadeau et cliquez sur le coeur"
     text2: "Découvrez le concours du jour"
-    text3: "A vous de jouer !"
+    text3: "A vous de jouer et bonne chance!"
     text4: "Ce n'est pas parce que la fête des grands-mères est finie qu'il n'y a plus de cadeaux !!"
     mars: "Mars"
     avril: "Avril"
     mai: "Mai"
     play: "Cliquez ici pour jouer"
-    title-regle: "Régles du Concours"
+    title-regle: "Régles du Conco urs"
     regle: "L’Utilisateur est libre de participer au premier concours #HOPENBORDEAUX. L’entreprise Hopen Project propose aux Utilisateurs de participer à un concours dans le cadre du lancement du projet Hopen Family. Une fois connecté sur le site www.hopen.family, les utilisateurs ont accès au concours. Chaque jour, une règle du jeux sera partagée, annonçant la mission proposée à l’Utilisateur. Celui-ci devra se rendre sur la page Facebook www.facebook.com/hopenfamily et pourra commenter les publications en suivant les missions proposées par Hopen Project afin d‘être tiré au sort.
 Ce concours ne constitue en aucun cas un contrat de travail et n’entraîne aucune rémunération de la part d’Hopen Project.
 Les lots gagnés sont entièrement gratuits et seront envoyés par l’équipe Hopen Project.
