--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,7 @@ en:
           feature: "Concept"
           download: "Download"
           download1: "News"
+          partner: "Partners"
           hopen_box: "Features"
           sign_in: "Sign In"
           sign_up: "Sign Up"
