--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -31,6 +31,7 @@ fr:
           feature: "Concept"
           download: "Télécharger"
           download1: "Actualités"
+          partner: "Partenaires"
           hopen_box: "Solution"
           sign_in: "Connecter"
           sign_up: "Enregistrer"
