add link for picture partners

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -226,6 +226,7 @@ www.hopenproject.com"
 ##########################################
   home:
     title_under: "Our grandparents smart object"
+    scroll: "Discover our concept"
 ##########################################
   calendar:
     title: "OUR FIRST CONTEST #HOPENBORDEAUX"
@@ -242,7 +243,7 @@ www.hopenproject.com"
     title4: "And so ?"
     title_under4: "The principle is simple: you know the advent calendars? Same story.
 Every day, discover a mission, accomplish it and win many gifts.
-For this, we have appealed to our whole ecosystem which has been super reactive and hyper seduced by Hopen Family:"
+For this, we have appealed to our whole ecosystem which has been super reactive and hyper seduced by Hopen Family."
     title_under41: "Tesla, Femer, Toot, Monsieur T-shirt, Akrone, Arbor and sens, Château Lamothe Castera, L'appuntamento, Cap Sciences, Salinières Theater, RTL2..."
     title_under42: "We infinitely thank them for their involvement, because the most important thing is : LoveYourFamily. And they share it with us."
     text1: "Open the daily box and click on the heart"
