Add link for partner and change style for button scroll

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -246,7 +246,9 @@ Every day, discover a mission, accomplish it and win many gifts.
 For this, we have appealed to our whole ecosystem which has been super reactive and hyper seduced by Hopen Family."
     title_under41: "Tesla, Femer, Toot, Monsieur T-shirt, Akrone, Arbor and sens, Château Lamothe Castera, L'appuntamento, Cap Sciences, Salinières Theater, RTL2..."
     title_under42: "We infinitely thank them for their involvement, because the most important thing is : LoveYourFamily. And they share it with us."
-    text1: "Open the daily box and click on the heart"
+    text1: "Open the"
+    text11: "daily box"
+    text12: "and click on the heart"
     text2: "Discover the contest of the day"
     text3: "Play and Good Luck!"
     text4: "It's not because Christmas is over that there are no more gifts !!"
