add picture facebook

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -255,6 +255,8 @@ For this, we have appealed to our whole ecosystem which has been super reactive 
     mars: "March"
     avril: "April"
     mai: "May"
+    challenge: "Challenge"
+    winner-box: "Winner"
     play: "Click here to play"
     title-regle: "Contest Rules"
     regle: "The User is free to participate in the first contest #HOPENBORDEAUX. Hopen Project offers to its Users the opportunity to participate in a contest to launch the Hopen Family Project. Once logged on www.hopen.family, Users have access to the contest. Each day, a new contest will be shared, announcing to the User a new mission. He will have to reach our Facebook page www.facebook.com/hopenfamily and will be able to comment and fulfil his missions proposed by Hopen Project in order to be drawn.
