--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -267,6 +267,8 @@ Pour cela, nous avons fait appel à notre écosystème qui a été super réacti
     mars: "Mars"
     avril: "Avril"
     mai: "Mai"
+    challenge: "Concours"
+    winner-box: "Vainqueurs"
     play: "Cliquez ici pour jouer"
     title-regle: "Régles du Concours"
     regle: "L’Utilisateur est libre de participer au premier concours #HOPENBORDEAUX. L’entreprise Hopen Project propose aux Utilisateurs de participer à un concours dans le cadre du lancement du projet Hopen Family. Une fois connecté sur le site www.hopen.family, les utilisateurs ont accès au concours. Chaque jour, une règle du jeux sera partagée, annonçant la mission proposée à l’Utilisateur. Celui-ci devra se rendre sur la page Facebook www.facebook.com/hopenfamily et pourra commenter les publications en suivant les missions proposées par Hopen Project afin d‘être tiré au sort.
