change text for banner2

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -25,7 +25,7 @@ fr:
       header:
         title: "Hopen Family"
         description_1: "Je peux envoyer mes photos à mes grands-parents"
-        description_2: "Ils les reçoivent instantanément"
+        description_2: "Ils les reçoivent sur leur Télévision"
         button: "Jouez maintenant !"
         navbar:
           feature: "Concept"
