Add link and navbar

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,6 +38,7 @@ en:
           sign_out: "Sign Out"
           support_us: "Support us"
           product: "Product"
+          testimonial: "Testimonial"
           story: "Story"
 ##################################
   features:
