--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -38,6 +38,7 @@ fr:
           sign_out: "Déconnecter"
           support_us: "Soutenez-nous"
           product: "Produit"
+          testimonial: "Temoignage"
           story: "Histoire"
 #####################################
   features:
