Add new base line

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -280,7 +280,7 @@ Legal information Hopen Project S.A.S. Capital 10 000 Euros SIRET 81193945300015
     btn: "Press Area"
 ###########################################
   banner:
-    title_under: "Share your best moments from your phone"
+    title_under: "Your new family channel"
     title_under2: "straight to your grandparents TV"
 ###########################################
   video:
