--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -292,7 +292,7 @@ Mentions légales Hopen Project S.A.S. Capital 10 000 Euros SIRET 81193945300015
     btn: "Espace Presse"
 ###########################################
   banner:
-    title_under: "Partagez vos moments depuis votre téléphone"
+    title_under: "Votre nouvelle chaîne famille"
     title_under2: "directement sur la Télé de vos grands-parents"
 ###########################################
   video:
